@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>azure-language-services-demo</artifactId>
+    <artifactId>lecturescribe-demo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -13,27 +13,29 @@
     </properties>
 
     <dependencies>
-        <!-- Azure AI Text Analytics dependency -->
         <dependency>
             <groupId>com.azure</groupId>
-            <artifactId>azure-ai-textanalytics</artifactId>
-            <version>5.5.2</version>
+            <artifactId>azure-identity</artifactId>
+            <version>1.14.0</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
+        <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-ai-openai</artifactId>
+            <version>1.0.0-beta.11</version>
+        </dependency>
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>2.0.16</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.16</version>
             <scope>runtime</scope>
         </dependency>
-
-        <!-- Add any other dependencies your project needs here -->
     </dependencies>
 
     <build>
@@ -43,8 +45,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>22</source>
+                    <target>22</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
